--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://your-notion-page.notion.site/616b148b878..." />
+    <meta http-equiv="refresh" content="0; url=https://cuddly-mars-766.notion.site/1b616b148b8780c89be0d96c6329c4aa" />
     <title>Redirecting...</title>
 </head>
 <body>
