--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://cuddly-mars-766.notion.site/1b616b148b8780c89be0d96c6329c4aa" />
-    <title>Redirecting...</title>
+     <!-- Open Graph Meta Tags -->
+     <meta property="og:title" content="다원축산">
+     <meta property="og:description" content="">
+     <meta property="og:image" content="store.png">
+     <meta property="og:type" content="website">
+     <meta property="og:url" content="https://dawonmeat.kr">
+    <title>다원축산</title>
 </head>
 <body>
     <p>이동 중입니다... <a href="https://cuddly-mars-766.notion.site/1b616b148b8780c89be0d96c6329c4aa">클릭하세요</a></p>
