--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://cuddly-mars-766.notion.site/1b616b148b8780c89be0d96c6329c4aa" />
+    <meta http-equiv="refresh" content="0; url=https://blog.naver.com/dawon_meat" />
      <!-- Open Graph Meta Tags -->
      <meta property="og:title" content="다원축산">
      <meta property="og:description" content="">
@@ -12,6 +12,6 @@
     <title>다원축산</title>
 </head>
 <body>
-    <p>이동 중입니다... <a href="https://cuddly-mars-766.notion.site/1b616b148b8780c89be0d96c6329c4aa">클릭하세요</a></p>
+    <p>이동 중입니다... <a href="https://blog.naver.com/dawon_meat">클릭하세요</a></p>
 </body>
 </html>
